sites/old/client/src/App.css
/* ... */
.modal__enroll input:focus:not([type='radio']) {
    border-color: var(--yellow-background) !important;
    box-shadow: 0 0 0 3px rgba(255, 229, 0, 0.12);
    outline: none;
}

.modal__enroll button {
    width: 100%;
    font-weight: 700;
    font-size: 15px;
    padding: 14px;
    border-radius: 12px;
}

/* ModalSuccess */
.modal--success .modal__content {
    max-width: 380px;
    text-align: center;
}

.modal--success button {
    width: 100%;
    font-weight: 700;
    font-size: 15px;
    padding: 14px;
    border-radius: 12px;
}

.modal--success ul {
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-bottom: 25px;
}

@media (max-width: 567px) {
    .modal__enroll form {
        grid-template-columns: 1fr;
    }

    .modal__enroll .form__field:nth-child(3),
    .modal__enroll form > button,
    .modal__enroll form > p {
        grid-column: 1;
    }
}

/* header */
header {
    padding-bottom: 100px;
}

.header {
    position: relative;
    display: flex;
    padding-top: 60px;
}

.header__text {
    flex-basis: 60%;
    position: relative;
    z-index: 2;
}

.header__text h1 {
    margin-bottom: 10px;
}

.header__text p {
    margin-bottom: 30px;
    font-size: 20px;
}

.header__list {
    margin-bottom: 50px;
}

.header__item {
    display: inline-block;
    color: var(--white);
    vertical-align: middle;
    margin-right: 30px;
}

.header__item:last-child {
    margin-right: 0;
}

.header__item::before {
    content: url(./shared/assets/icons/interface/star.svg);
    vertical-align: middle;
    margin-right: 12px;
}

.header__text button {
    width: 270px;
}

.header__image {
    flex-basis: 40%;
}

.header__blop {
    position: absolute;
    right: -370px;
    top: -85px;
    z-index: -1;
}

.cross {
    position: absolute;
}

#cross1 {
    top: -50px;
    right: 450px;
    transform: scale(0.5);
}

#cross2 {
    top: 50px;
    right: 300px;
}

#cross3 {
    top: 80px;
    right: 150px;
    transform: scale(0.8);
}

#cross4 {
    top: 250px;
    right: 400px;
    transform: scale(0.6);
}

#cross5 {
    bottom: 200px;
    right: 250px;
    transform: rotate(45deg);
}

#cross6 {
    bottom: 100px;
    right: 450px;
    transform: rotate(45deg);
}

.blop-wrapper {
    overflow: hidden;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 45px;
    top: 0;
    z-index: -1;
    /* background-color: #fff; */
}

.blop {
    position: absolute;
}

#blop2 {
    bottom: 0px;
    right: 250px;
}

.circle {
    position: absolute;
    top: 10px;
    right: 400px;
}

.circle-left {
    position: absolute;
    top: 250px;
    left: -150px;
}

.header__circle {
    position: absolute;
    top: -150px;
    right: -350px;
}

.header__circle-blop {
    position: absolute;
    right: -390px;
    bottom: 45px;
    width: 300px;
}

/* not found */

.not_found {
    text-align: center;
    /* height: 100vh; */
}

.not_found__banner {
    display: flex;
    justify-content: center;
    margin-bottom: 50px;
}

.not_found__link {
    margin-top: 30px;
    display: inline-block;
    border-radius: 5px;
    width: 270px;
    height: 44px;
    background-color: var(--yellow-background);
    box-sizing: border-box;
    padding: 12px 0;
    color: var(--dark-blue);
    font-size: 14px;
    text-align: center;
    transition: 0.3s;
}

@media screen and (max-width: 567px) {
    .container {
        width: auto;
        padding: 0 10px;
        box-sizing: border-box;
    }

    h1 {
        font-size: 20px;
        margin-bottom: 25px !important;
    }

    h2 {
        font-size: 22px;
        line-height: 22px;
    }

    header {
        padding: 0;
    }

    .section__heading .heading__icon {
        margin-right: 12px;
    }

    .header {
        background: url(./shared/assets/images/header_bg.png) no-repeat;
        background-size: cover;
        padding: 30px 15px;
        border-radius: 10px;
        margin-bottom: 20px;
        position: relative;
        z-index: 1;
        overflow: hidden;
        justify-content: center;
    }

    .header::before {
        content: '';
        display: block;
        position: absolute;
        top: 0;
        right: 0;
        left: 0;
        bottom: 0;
        z-index: -1;
        opacity: .5;
        background: linear-gradient(45deg, #4B4DB4 0%, #333390 100%);
    }

    .header__text p {
        display: none;
    }

    .header__list {
        margin-bottom: 20px;
    }

    .header__item {
        font-size: 14px;
        margin-bottom: 12px;
    }

    .header__item:last-child {
        margin-bottom: 0;
    }

    .header__blop {
        display: none;
    }

    .header__img {
        display: none;
    }

    .ways .section__heading {
        margin-bottom: 0;
    }

    .ways__categories {
        flex-wrap: wrap;
    }

    .ways__categories button {
        font-size: 12px;
    }

    .for {
        display: none;
    }

    .how__card {
        position: static;
        width: 100%;
        height: 140px;
        margin-bottom: 15px;
    }

    .how__girl,
    .how__boy,
    .planet_s,
    .planet_b {
        display: none;
    }

    .how__card_pop {
        display: none;
    }

    .how__card::after {
        display: none;
    }

    .modal__enroll form input:last-of-type {
        grid-row-start: 3;
        grid-column-start: 1;
        grid-column-end: 2;
    }

    .modal__enroll form button {
        grid-row-start: 4;
        grid-column-start: 1;
        grid-column-end: 2;
    }

    .about__wrapper {
        border-radius: 8px;
        /* background: linear-gradient(45deg, #4D50C3 0%, #91267D 100%), #FFF; */
        flex-direction: column;
        padding: 10px;
    }

    .about__img img {
        width: 250px;
        margin-bottom: 20px;
    }

    .about__text blockquote {
        display: none;
    }

    .about__text p {
        text-align: justify;
    }

}



/* footer */

